2010-02-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/scinrrd_intersect_plane.m:

	- SCINRRD_INTERSECT_PLANE  Compute intersection of a plane with an
	SCI NRRD image volume.

	* Add FiltersToolbox/scinrrd_squeeze.m:

	- SCINRRD_SQUEEZE Remove dummy dimension and convert data to
	double type.

	* Add FiltersToolbox/scinrrd_ndgrid.m:

	- Generation of arrays for 3D SCI NRRD image volumes.

2010-02-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/scirunnrrd_optimal_intersecting_plane.m:

	- SCIRUNNRRD_INTERSECT_PLANE  Optimise intersection plane for SCI
	NRRD segmentation mask.

2010-02-04  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/quaternion2matrix.m:

	- Convert quaternion to rotation matrix. Function written
	originally by Vicente Grau.

	* Add PointsToolbox/polycenter.m:

	- POLYCENTER  Compute center of mass of polygon.

2010-01-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/scirunnrrd_pca.m:

	- SCIRUNNRRD_PCA Principal Principal Component Analysis of the
	selected points in a SCI NRRD segmentation mask.

	* Add PointsToolbox/pts_pca.m:

	- PTS_PCA Linear and Kernel Principal Component Analysis (PCA and
	KPCA).

	This function was in my internal repository (r9953, v3.0,
	2008-06-14 22:07:56 +0100). I started developing it for my DPhil
	thesis at the Wolfson Medical Vision Laboratory, University of
	Oxford (2006-08-31 18:56:56 +0100).

	* Add PointsToolbox/pts_kmat.m:

	- PTS_KMAT Compute kernel matrix for Linear and Kernel Principal
	Component Analysis (PCA and KPCA).

	This function was in my internal repository (r7928, v2.3,
	2007-08-26 17:20:26 +0100). I started developing it for my DPhil
	thesis at the Wolfson Medical Vision Laboratory, University of
	Oxford (2007-06-09 15:27:07 +0100).

2009-12-08  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/dcm2metaimage.m:

	- Read the resolution values from the DICOM header, if possible.
